feat(tooling): early support wiring for ksp/kapt
Signed-off-by: Sam Gammon <sam@elide.dev>